niem-releases/4.1/index.md
---
  title: NIEM 4.1 Release
  short: NIEM 4.1
  description: An overview of the NIEM 4.1 release.
---

NIEM 4.1 is a minor release, published August 2018.

{:toc}
- TOC

## Resources

- Download the full [release package](https://github.com/NIEM/NIEM-Releases/archive/niem-4.1.zip) as a zip file

- View schemas and documentation on [release.niem.gov](https://release.niem.gov/niem/4.1) or [GitHub](https://github.com/NIEM/NIEM-Releases/tree/niem-4.1)

- Use online tools to explore the contents of NIEM 4.1:

  - [Schema Subset Generation Tool (SSGT)](https://tools.niem.gov/niemtools/ssgt/index.iepd) - search or build XML schema subset for use in IEPDs
    <br/><span class="text-muted">(go to `Options` in the menu bar to switch to the 4.1 release)</span>

  - [Model Viewer](https://niem.github.io/model/) - browse namespaces and their contents

- Download the [component spreadsheet](https://release.niem.gov/niem/4.1/niem-4.1.xlsx) or the [code spreadsheet](https://release.niem.gov/niem/4.1/niem-4.1-codes.xlsx) to explore the contents of NIEM 4.1 in Excel

## Highlights

{:.box}
> Content changes have been provided by the following domains:
>
- Biometrics
- Emergency Management
- Human Services
- Justice
- Military Operations

See the [NIEM 4.1 readme](https://github.com/NIEM/NIEM-Releases/blob/niem-4.1/README.md) for a list of changes.

## Specification Links

{% include specs/specification-list.html specIDs = "NDR-4.0, MPD-3.0.1, JSON-4.0, Conformance-3.0, CodeLists-4.0, CTAS-3.0, HLVA-3.0" %}

## Release Stats

The following are some basic statistics for the 4.1 release.

{% include page/release-stats.html csv=site.data.model.stats.stats-4_1 %}

<br/>
